<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assassins</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="action_profile">Profile</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="login_activity_title_label_1">City of</string>
    <string name="login_activity_title_label_2">Assassins</string>
    <string name="login_activity_hint_email">Enter email</string>
    <string name="login_activity_hint_password">Enter password</string>
    <string name="login_activity_button_login">Login</string>
    <string name="login_activity_button_sign_up">Sign up</string>
    <string name="register_activity_hint_name">Name</string>
    <string name="register_activity_hint_email">Email</string>
    <string name="register_activity_hint_password">Password</string>
    <string name="register_activity_hint_pass_confirm">Re-type password</string>
    <string name="register_activity_button_sign_up">Sign up</string>
    <string name="main_activity_button_log_out">Log out</string>
    <string name="title_activity_maps">Map</string>

</resources>
