<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="${packageName}.${activityClass}">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/cityscape"
        android:contentDescription="Menu" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_activity_title_label_1"
        android:id="@+id/textView"
        android:gravity="center_horizontal"
        android:layout_alignBottom="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_activity_title_label_2"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textColor="#ff0000"
        android:typeface="serif"
        android:textSize="40sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/login_error"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/loginEmail"
            android:singleLine="false"
            android:hint="@string/login_activity_hint_email"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/loginPassword"
            android:hint="@string/login_activity_hint_password"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/login_activity_button_login"
            android:id="@+id/btnLogin"
            android:padding="20dp"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/login_activity_button_sign_up"
            android:id="@+id/btnRegister"
            android:padding="20dp"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</RelativeLayout>
